--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 reference
+.env
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +24,4 @@ reference
 *.njsproj
 *.sln
 *.sw?
+
